--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 .vscode/launch.json
 cups-backend/onenote_backend
 /OneNoteHelperApp/.build
+/SendToOneNote.xcodeproj/xcuserdata
+/SendToOneNote.xcodeproj/xcshareddata
