--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ cups-backend/onenote_backend
 /OneNoteHelperApp/.build
 SendToOneNote.xcodeproj/xcshareddata
 SendToOneNote.xcodeproj/project.xcworkspace/xcuserdata/**
+SendToOneNote.xcodeproj/project.xcworkspace/xcuserdata/laurent.xcuserdatad/UserInterfaceState.xcuserstate
 
