--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .vscode/launch.json
 cups-backend/onenote_backend
 /OneNoteHelperApp/.build
-SendToOneNote.xcodeproj/xcshareddata
+SendToOneNote.xcodeproj/xcshareddata/**
 SendToOneNote.xcodeproj/project.xcworkspace/xcuserdata/**
 SendToOneNote.xcodeproj/project.xcworkspace/xcuserdata/laurent.xcuserdatad/UserInterfaceState.xcuserstate
 
