--- a/OneNoteHelperApp/Info.plist
+++ b/OneNoteHelperApp/Info.plist
@@ -8,6 +8,8 @@
 	<string>OneNoteHelperApp</string>
 	<key>CFBundleIdentifier</key>
 	<string>fr.dubertrand.OneNoteHelperApp</string>
+	<key>CFBundleIconName</key>
+	<string>AppIcon</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
