--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ SendToOneNote.xcodeproj/xcshareddata/**
 SendToOneNote.xcodeproj/project.xcworkspace/xcuserdata/**
 SendToOneNote.xcodeproj/project.xcworkspace/xcuserdata/laurent.xcuserdatad/UserInterfaceState.xcuserstate
 
+SendToOneNote.xcodeproj/project.xcworkspace/xcuserdata/laurent.xcuserdatad/UserInterfaceState.xcuserstate
