--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ SendToOneNote.xcodeproj/project.xcworkspace/xcuserdata/**
 SendToOneNote.xcodeproj/project.xcworkspace/xcuserdata/laurent.xcuserdatad/UserInterfaceState.xcuserstate
 
 SendToOneNote.xcodeproj/project.xcworkspace/xcuserdata/laurent.xcuserdatad/UserInterfaceState.xcuserstate
+/SendToOneNote.xcodeproj/project.xcworkspace
