notebook/section/page controls

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ SendToOneNote.xcodeproj/project.xcworkspace/xcuserdata/laurent.xcuserdatad/UserI
 
 SendToOneNote.xcodeproj/project.xcworkspace/xcuserdata/laurent.xcuserdatad/UserInterfaceState.xcuserstate
 /SendToOneNote.xcodeproj/project.xcworkspace
+*.xcuserstate
